[project]
name = "audio-clustering"
version = "0.1.0"
description = "This project clusters songs into playlists based on their sound similarity. It includes two implementations: one using traditional audio features like MFCCs and tempo, and another using deep learning-based audio embeddings from a pre-trained model. Given a folder of music files and a target number of playlists, the program outputs a .json file with grouped songs and logs the entire process."
authors = [
    {name = "Artur Khodakovskyi"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "torchaudio (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false